<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="cn.com.stableloan.ui.activity.integarl.UpImageIdentityActivity">
    <include layout="@layout/toolbar_layout"/>
    <ScrollView
        android:layout_marginTop="@dimen/_50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/identification_card"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_IdentificationCard"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/select_text_color"
                android:textSize="@dimen/_16sp"
                android:text="@string/identification_card"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/take_identity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_takephoto"/>
                <ImageView
                    android:id="@+id/iv_IdentityUp"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_identity_up"/>
                <ImageView
                    android:id="@+id/iv_IdentityDown"
                    android:layout_marginLeft="@dimen/_20dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_identity_down"/>
                <ImageView
                    android:id="@+id/iv_IdentityHead"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_identity_head"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_BusinessCard"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/select_text_color"
                android:textSize="@dimen/_16sp"
                android:text="@string/business_card"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/take_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_takephoto"/>
                <ImageView
                    android:id="@+id/iv_business"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_business_card"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_JobCard"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/select_text_color"
                android:textSize="@dimen/_16sp"
                android:text="@string/job_card"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/take_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_takephoto"/>
                <ImageView
                    android:id="@+id/iv_job"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_job"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_DebitCard"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/select_text_color"
                android:textSize="@dimen/_16sp"
                android:text="@string/debit_card"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/take_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_takephoto"/>
                <ImageView
                    android:id="@+id/iv_debit"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_debit"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_CreditCard"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/select_text_color"
                android:textSize="@dimen/_16sp"
                android:text="@string/credit_card"/>
            <LinearLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/take_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_takephoto"/>
                <ImageView
                    android:id="@+id/iv_credit"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/iv_credit"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/image_slide"
        />
</RelativeLayout>
