<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/invitebackground"
    tools:context="cn.com.stableloan.ui.activity.integarl.InviteFriendsActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/goback"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/back"/>
                <TextView
                    android:layout_marginLeft="@dimen/_2dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/inivte_friendstitle"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>
        <TextView
            android:layout_marginTop="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/invite_text"/>
        <LinearLayout
            android:layout_margin="18dp"
            android:orientation="vertical"
            android:background="@drawable/inivte_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="@dimen/_10dp"
                android:textSize="18sp"
                android:textColor="#FF9D00"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hi, 用户"/>
            <TextView
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/inivte_textcolor"
                android:text="您作为安稳钱包的种子用户，拥有兑换现金的权利"/>
            <TextView
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/inivte_textcolor"
                android:text="1.您的好友注册并填写申请资料"/>
            <ImageView
                android:layout_marginTop="@dimen/_10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/invite_step"/>
            <TextView
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/inivte_textcolor"
                android:text="2.每位好友填写申请资料，您获得1元现金。"/>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="41dp"
                android:layout_height="58dp"
                android:src="@mipmap/inivte_friend"
                />
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+1元/好友"
                android:textSize="16sp"
                android:textColor="@color/invitebackground"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
        <include layout="@layout/invite_layout_share"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/invite_top_yellow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:paddingRight="@dimen/_50dp"
            android:paddingLeft="@dimen/_50dp"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="邀请人"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/blacktext"/>
            <TextView
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="状态"
                android:textSize="18dp"
                android:textColor="@color/blacktext"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="奖金"
                android:textSize="18dp"
                android:textColor="@color/blacktext"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/contact_RecyclerView"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:background="@drawable/invite_bottom_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20dp"
            >
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:text="*邀请微信和QQ好友只有在对方注册后才能显示在名单中。"/>
    </LinearLayout>

</ScrollView>
